Fix right margin collapsing
inline-block is magic
https://stackoverflow.com/questions/11695354/css-right-margin-does-not-work-inside-a-div-with-overflow-scroll

--- a/spg.css
+++ b/spg.css
@@ -15,7 +15,8 @@ label > details > div > p, label > details > div > ul > li {
 }
 
 form {
-	margin-right: var(--global-margin);
+	display: inline-block;
+	padding-right: var(--global-margin);
 }
 
 .column {
